<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/volume"
            android:id="@+id/TVvolume"
            android:paddingLeft="10dp"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SBvolume" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dificulty"
            android:id="@+id/TVdificulty"
            android:paddingLeft="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:id="@+id/Beasy"
                android:onClick="setDificulty"
                android:layout_margin="5dp"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:id="@+id/Bmedium"
                android:onClick="setDificulty"
                android:layout_margin="5dp"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:id="@+id/Bhard"
                android:onClick="setDificulty"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/background"
            android:id="@+id/TVImages"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"/>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal">


            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/IVbackground1"
                android:background="#909090"
                android:padding="3dp"
                android:layout_margin="5dp"
                android:onClick="changeBackground"
                android:src="@drawable/whitepreview" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/IVbackground2"
                android:background="#909090"
                android:padding="3dp"
                android:layout_margin="5dp"
                android:onClick="changeBackground"
                android:src="@drawable/woodpreview" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/IVbackground3"
                android:background="#909090"
                android:padding="3dp"
                android:layout_margin="5dp"
                android:onClick="changeBackground"
                android:src="@drawable/blackpreview" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="5dp">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/findImage"
                android:id="@+id/Bbackground"
                android:onClick="findImageButton"/>

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/IVbackground4"
                android:background="#909090"
                android:padding="3dp"
                android:layout_marginLeft="40dp"
                android:onClick="changeBackground"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="2dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/selectfood"
                android:id="@+id/Bselectfood"
                android:layout_gravity="center_horizontal"
                android:onClick="selectFood" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/IVcheck"
                android:src="@drawable/check" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="2dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/alerts"
                android:id="@+id/Balerts"
                android:layout_gravity="center_horizontal"
                android:onClick="selectAlerts" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/IVtime"
                android:src="@drawable/time"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="2dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/statistics"
                android:id="@+id/Bstatistics"
                android:layout_gravity="center_horizontal"
                android:onClick="save" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/IVpaper"
                android:src="@drawable/paper" />


        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/Bsave"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:onClick="save" />

    </LinearLayout>
</ScrollView>