<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffffffff">

    <LinearLayout
        android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/paramlevel"
                android:paddingLeft="10dp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/cenas"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Nível"
                android:id="@+id/textView" />

            <Spinner
                android:id="@+id/levels"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>

            <Button
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:onClick="addLevel"
                android:text="Criar Novo"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:onClick="remLevel"/>

        </LinearLayout>

        <View
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:background="@color/material_blue_grey_800"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:text="Percentagem de acertos necessária para completar o nível"
                    android:textColor="#000000"/>

                <EditText
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ETacertos"
                    android:text="50%"
                    android:singleLine="true"
                    android:gravity="center"
                    android:textSize="16dp" />

            </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:text="Tempo a retirar dos alimentos no ecrã"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/ETtempoecra"
                android:text="200 ms"
                android:singleLine="true"
                android:gravity="center"
                android:textSize="16dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:text="Intervalo entre a apresentação de alimentos"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/ETintervalo"
                android:text="1000 ms"
                android:singleLine="true"
                android:gravity="center"
                android:textSize="16dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="150dp">

            <TextView
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:text="Tempo a mais que demora para aparecer o sinal STOP"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/ETtempostop"
                android:text="100 ms"
                android:singleLine="true"
                android:gravity="center"
                android:textSize="16dp" />

        </LinearLayout>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="save"
            />
    </LinearLayout>

</ScrollView>